# FaceSpyder

./: CMakeLists.txt  README.md  authwindow.cpp  authwindow.h  authwindow.ui  facedetectionview.cpp  facedetectionview.h  facedetectionworker.cpp  facedetectionworker.h  facerecognition.cpp  facerecognition.h  facerecognitionview.cpp  facerecognitionview.h  image.cpp  image.h  imagematching.cpp  imagematching.h  item.cpp  item.h  itemdetectedview.cpp  itemdetectedview.h  loadingwindow.cpp  loadingwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menubutton.cpp  menubutton.h  observer.cpp  observer.h  pch.h  spyderwindow.cpp  spyderwindow.h  spyderwindow.ui  video.cpp  video.h  videoplayer.cpp  videoplayer.h
FaceSpyder/: authwindow.cpp  facedetectionview.cpp  facedetectionview.h  facedetectionworker.cpp  facedetectionworker.h  facerecognition.cpp  facerecognition.h  facerecognitionview.cpp  facerecognitionview.h  image.cpp  image.h  imagematching.cpp  imagematching.h  item.cpp  item.h  itemdetectedview.cpp  itemdetectedview.h  loadingwindow.cpp  main.cpp  mainwindow.cpp  mainwindow.h  menubutton.cpp  menubutton.h  observer.cpp  observer.h  pch.h  spyderwindow.cpp  spyderwindow.h  video.cpp  video.h  videoplayer.cpp  videoplayer.h
